[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
bytes = "1.4.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = { git = "https://github.com/rustwasm/gloo" }
http = "0.2.9"
image = { version = "0.24.6" }
log = "0.4.17"
reqwest = { version = "0.11.18" }
rusty-s3 = "0.4.1"
time = { version = "0.3.21", features = ["wasm-bindgen"] }
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Performance"] }
zeroize = "1.6.0"
